# ta-lib-everywhere

./: .gitignore  README.md  build.cmd  build_linux.sh  custom_README.md  custom_pyproject.toml  custom_setup.py  pyproject.toml
.github/workflows/: build_talib_wheels.yml  build_windows_wheels.yml  smoke_test.yml
wheels/: rename.py
