[project]
name = "ta-lib-everywhere"
version = "0.6.4"
dynamic = ["authors", "classifiers", "description", "license", "readme"]
dependencies = [
    "setuptools",
    "numpy>=2.0",
]

[build-system]
requires = ["setuptools", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
skip = ["pp*", "cp38-*", "cp39-*"]
archs = ["universal2"]

[tool.cibuildwheel.linux]
skip = ["pp*", "*musl*", "cp38-*", "cp39-*"]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
skip = ["pp*", "*32", "cp38-*", "cp39-*"]